elixir/force-app/main/default/objects/ACN_Information__c/ACN_Information__c.object-meta.xml
<CustomObject>
    <label>ACN Information</label>
    <nameField>
        <label>ACN Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACN Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>