elixir/force-app/main/default/objects/ACN_Information__c/fields/ASICNumber__c.field-meta.xml
<CustomField>
    <fullName>ASICNumber__c</fullName>
    <label>ASICNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>