elixir/force-app/main/default/objects/ACN_Information__c/fields/DateTimeRetrieved__c.field-meta.xml
<CustomField>
    <fullName>DateTimeRetrieved__c</fullName>
    <label>DateTimeRetrieved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>